--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
   </head>
   <body>
     <div id="message">
-      <h2>Hello,  World !</h2>
+      <h2>Hello,  Artem! It's Oleg!</h2>
       
      
     <script>
