tests after artem session

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
   </head>
   <body>
     <div id="message">
-      <h2>Hello,  Artem! It's Oleg!</h2>
+      <h2>Hello,  Artem! It's Oleg!
+        (second try)
+      </h2>
       
      
     <script>
